syntax = "proto3";
import "google/protobuf/empty.proto";
package auth;

// Importing Timestamp from the Google Protobuf library for date-time fields.
import "google/protobuf/timestamp.proto";

service AuthService {
  rpc CreateUser (CreateAuthDto) returns (CreateUserResponse) {}
  rpc GetUserByCredential(LoginAuthRequest) returns (AuthPublic) {}
  rpc CreateToken(CreateTokenRequest) returns (TokenResponse) {}
  rpc DecodeToken(DecodeTokenRequest) returns (TokenDataResponse) {}
  rpc GetUserById(GetUserByIdRequest) returns (AuthPublic) {}
  rpc VerifyEmail (VerifyEmailRequest) returns (AuthPublic) {}
  rpc ForgotPassword (ForgotPasswordRequest) returns (google.protobuf.Empty) {}
  rpc ResetPassword (ResetPasswordRequest) returns (google.protobuf.Empty) {}
  rpc ResetPasswordWithToken (ResetPasswordWithTokenRequest) returns (google.protobuf.Empty) {}
  rpc ResendEmail (ResendEmailRequest) returns (google.protobuf.Empty) {}
}
message ResetPasswordRequest {
  int32 userId = 1;
  string password = 2;
}
message ResendEmailRequest {
  string email = 1;
}
message ResetPasswordWithTokenRequest {
  string token = 1;
}
message ForgotPasswordRequest {
  string email = 1;
}
message ForgotPasswordResponse {
  bool success = 1;
}
message VerifyEmailRequest {
  string token = 1;
}
message GetUserByIdRequest {
  int32 id = 1;
}

message CreateUserResponse {
    AuthPublic user = 1;
    string accessToken = 2;
    string refreshToken = 3;
}
message CreateAuthDto  {
  // The username of the user.
  string username = 1;

  // The password of the user.
  string password = 2;

  // The country of the user.
  string country = 3;

  // The email of the user.
  string email = 4;

  // The optional profile picture of the user.
  string profilePicture = 5;

  // The optional name of the browser used by the user.
  string browserName = 6;

  // The optional type of device used by the user.
  string deviceType = 7;
}


message AuthPublic {
  // The unique identifier for the user.
  int32 id = 1;

  // The username of the user.
  string username = 2;

  // The public profile ID of the user, which is optional.
  string profilePublicId = 3;

  // The email of the user.
  string email = 4;

  // The country of the user.
  string country = 5;

  // The name of the browser used by the user.
  string browserName = 6;

  // The type of device used by the user.
  string deviceType = 7;

  // The date and time when the user was created.
  google.protobuf.Timestamp createdAt = 8;

  // The date and time when the user was updated.
  google.protobuf.Timestamp updatedAt = 9;
}


message LoginAuthRequest {
  // The email of the user.
  string email = 1;

  // The password of the user.
  string password = 2;

  // The optional name of the browser used by the user.
  string browserName = 3;

  // The optional type of device used by the user.
  string deviceType = 4;
}


message LoginAuthResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

// The request message containing the access token payload.
message AccessTokenPayload {
    int32 id = 1;
    string email = 2;
    string username = 3;
}

// The response message containing the token details.
message TokenResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

// The request message containing the token string to decode.
message DecodeTokenRequest {
    string token = 1;
}

// The response message containing the decoded token data.
message TokenDataResponse {
    int32 id = 1;
    string email = 2;
    string username = 3;
    int64 iat = 4;
    int64 exp = 5;
}

message CreateTokenRequest {
  int32 id = 1;
  string email = 2;
  string username = 3;
}